@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020110428"
+#define public MagickPackageVersionAddendum ".020110504"
 #define public MagickPackageReleaseDate "unreleased"
